--- a/lib/bower.json
+++ b/lib/bower.json
@@ -1,11 +1,13 @@
 {
-  "name": "lib",
-  "version": "0.0.0",
-  "homepage": "https://github.com/kirkwgraves/ng-music-history",
+  "name": "ICD Tool",
+  "description": "",
+  "main": "",
   "authors": [
-    "Kirk Graves <graves.kirk@gmail.com>"
+    "Kirk Walker Graves <graves.kirk@gmail.com>"
   ],
   "license": "MIT",
+  "homepage": "https://github.com/chiozzo/icd-tool",
+  "moduleType": [],
   "ignore": [
     "**/.*",
     "node_modules",
@@ -14,15 +16,9 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.4.7",
-    "jquery": "~2.1.4",
-    "angularfire": "~1.1.3",
     "angular-material": "~1.0.3",
-    "angular-messages": "~1.4.9",
-    "angular-animate": "~1.4.9",
-    "angular-aria": "~1.4.9"
-  },
-  "description": "",
-  "main": "",
-  "moduleType": []
+    "angular": "~1.4.9",
+    "angular-ui": "~0.4.0",
+    "angularfire": "~1.1.3"
+  }
 }
