--- a/lib/bower.json
+++ b/lib/bower.json
@@ -19,6 +19,7 @@
     "angular-material": "~1.0.3",
     "angular": "~1.4.9",
     "angular-ui": "~0.4.0",
-    "angularfire": "~1.1.3"
+    "angularfire": "~1.1.3",
+    "angular-ui-router": "^0.2.17"
   }
 }
